# RusCxnPipe

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
demo/: app.py  requirements.txt
examples/: advanced_usage.py  basic_usage.py  classification.py  custom_models.py  multiple_texts.py  semantic_search.py  single_text.py  span_prediction.py
ruscxnpipe/: __init__.py  _version.py
ruscxnpipe/core/: __init__.py  classification.py  pipeline.py  semantic_search.py  span_prediction.py
ruscxnpipe/data/: __init__.py  constructicon.json  loader.py
ruscxnpipe/models/: config.py
ruscxnpipe/utils/: __init__.py  filtering.py  postprocessing.py
